--- a/styles.css
+++ b/styles.css
@@ -147,3 +147,78 @@ h2 {
   padding-top: 23px;
   color: black;
 }
+#arrow {
+  position: relative;
+  top: -40px;
+  right: -510px;
+}
+
+.forsale {
+  text-align: center;
+  background-color: #f4f4f5;
+  margin-top: 45px;
+  height: 105px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 24px;
+  color: #333;
+}
+
+.artimgs {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.artimgs img {
+  width: 323px;
+  height: 216px;
+  object-fit: cover;
+  border-radius: 5px;
+  margin-top: 71px;
+}
+
+.artImgText {
+  text-align: center;
+  display: flex;
+  justify-content: space-evenly;
+  font-size: 20px;
+  margin-top: 20px;
+}
+
+.artImgText h4 {
+  width: 323px;
+}
+
+.artImgText2 {
+  text-align: center;
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 10px;
+}
+
+.artImgText2 p {
+  width: 323px;
+}
+
+.moreToCome {
+  display: flex;
+  justify-content: center;
+  margin-top: 40px;
+  font-weight: bold;
+}
+
+.bottomSocials {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: #30ab9e;
+  color: whitesmoke;
+  font-size: 20px;
+  height: 141px;
+  margin-top: 40px;
+}
+
+.imgLogo {
+  display: inline;
+}
