--- a/Feedback/Feedbackstyles.css
+++ b/Feedback/Feedbackstyles.css
@@ -171,6 +171,7 @@ input[type="submit"]:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
+  border-radius: 5px;
 }
 
 .reviewSection img {
@@ -204,7 +205,6 @@ input[type="submit"]:hover {
   color: whitesmoke;
   font-size: 20px;
   height: 141px;
-  margin-top: 100px;
 }
 
 .imgLogo {
