--- a/Gallery/Gallerystyles.css
+++ b/Gallery/Gallerystyles.css
@@ -1,5 +1,6 @@
 * {
   margin: 0;
+  padding: 0;
 }
 
 body {
@@ -85,7 +86,7 @@ nav a:hover {
 .Gallery {
   margin-top: 100px;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(4, 1fr);
   column-gap: 1em;
   grid-template-rows: 2;
   row-gap: 1em;
@@ -94,10 +95,12 @@ nav a:hover {
 }
 
 .gridimg {
-  width: 400px;
-  height: 268px;
+  max-width: 400px;
+  max-height: 268px;
   object-fit: cover;
   border-radius: 5px;
+  min-width: 0;
+  min-height: 0;
 }
 
 .griditem {
@@ -105,6 +108,8 @@ nav a:hover {
   justify-content: center;
   align-items: center;
   padding-bottom: 20px;
+  min-width: 0;
+  min-height: 0;
 }
 
 .bottomSocials {
@@ -116,6 +121,7 @@ nav a:hover {
   font-size: 20px;
   height: 141px;
   margin-top: 100px;
+  width: 100%;
 }
 
 .imgLogo {
